@startuml
skinparam classAttributeIconSize 0

interface StatusEffect {
    +apply(target : Combatant) : void
    +isExpired() : boolean
    +getName() : String
}

abstract class AbstractStatusEffect {
    -name : String
    -duration : int
    +getName() : String
    +isExpired() : boolean
    #decrementDuration() : void
}

class StunEffect {
    +apply(target : Combatant) : void
}

class DefendEffect {
    +apply(target : Combatant) : void
}

class SmokeBombEffect {
    +apply(target : Combatant) : void
}

class ArcaneBlastEffect {
    +apply(target : Combatant) : void
}

StatusEffect <|.. AbstractStatusEffect
AbstractStatusEffect <|-- StunEffect
AbstractStatusEffect <|-- DefendEffect
AbstractStatusEffect <|-- SmokeBombEffect
AbstractStatusEffect <|-- ArcaneBlastEffect
@enduml
